# kenkai

./: .gitignore  CMakeLists.txt  Kenkai.sln  Makefile  packages.config
Kenkai/: AnimatedEntity.cpp  AnimatedEntity.hpp  Control.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  GameWorld.cpp  GameWorld.hpp  Graphics.cpp  Graphics.hpp  Kenkai.vcxproj  Kenkai.vcxproj.filters  Player.cpp  Properties.hpp  Source.cpp  Source.s  Tools.hpp
filebuilder/: CMakeLists.txt
include/: AnimatedEntity.hpp  Assets.hpp  Camera.hpp  Collision.hpp  Control.hpp  Engine.hpp  Entity.hpp  Events.hpp  Game.hpp  GameWorld.hpp  Menu.hpp  Properties.hpp  Setup.hpp  State.hpp  Tools.hpp  UIElement.hpp  Weapon.hpp
kenkai/: CMakeLists.txt
kenkai/include/: control.hpp  engine.hpp  entity.hpp  event.hpp  game.hpp  object.hpp  state.hpp  types.hpp  world.hpp
kenkai/include/component/: animator.hpp  component.hpp
kenkai/include/entities/: player.hpp
kenkai/include/object/: object.hpp
kenkai/include/object/entity/: entity.hpp  player.hpp
kenkai/include/util/: taskmanager.hpp
kenkai/include/world/: world.hpp
kenkai/include/world/room/: home.hpp  room.hpp
kenkai/src/: control.cpp  entity.cpp  event.cpp  game.cpp  main.cpp  object.cpp  world.cpp
kenkai/src/component/: animator.cpp
kenkai/src/entities/: player.cpp
kenkai/src/object/: object.cpp
kenkai/src/object/entity/: entity.cpp  player.cpp
kenkai/src/util/: taskmanager.cpp
kenkai/src/world/: world.cpp
kenkai/src/world/room/: home.cpp  room.cpp
src/: AnimatedEntity.cpp  Assets.cpp  Camera.cpp  (+11 more)
(+20 files in other folders)
